fix: CLI options not passing to AIEngine due to Lazy CGLIB proxy field access